2006-06-27  Zoltan Varga  <vargaz@gmail.com>

	* gc_wrapper.h: Disable GC_REDIRECT_TO_LOCAL on solaris/x86 as well.

Tue May 23 12:17:51 CEST 2006 Paolo Molaro <lupus@ximian.com>

	* gc_wrapper.h: added definitions for the sgen GC.

2006-03-03  Zoltan Varga  <vargaz@gmail.com>

	* *: Move the contents of the util.c file to metadata/assembly.c.

2006-03-02  Zoltan Varga  <vargaz@gmail.com>

	* gc_wrapper.h: Allways disable thread local alloc on sparc even if __thread support
	is available.

2005-11-09  Miguel de Icaza  <miguel@novell.com>

	* unix/util.c (set_dirs): Instead of hardcoding the value to
	/usr/bin, use MONO_BINDIR which comes from Automake's bindir.  If
	the executable is in the place configured, use the Automake
	settings.  Otherwise use the standard-layout based computed
	paths. 

2005-11-08  Miguel de Icaza  <miguel@novell.com>

	* unix/util.c (set_dirs): The buffer is overwritten by the
	compute_base routine, so do not call it before checking for the
	/usr/bin/ prefix.

2005-11-01  Miguel de Icaza  <miguel@novell.com>

	* unix/util.c (set_dirs): Implement a relocatable version.

2005-03-29  Sebastien Pouliot  <sebastien@ximian.com>

	* gc_wrapper.h: Add required winsock2.h header for compiling with 
	VS.NET and let the project file defines GC_GCJ_SUPPORT (to avoid 
	tons of warnings).